# Precis

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE_NOTICE.md  README.md  SECURITY-BACKLOG.md  SECURITY.md  package-lock.json  package.json
backend/: MANIFEST.in  README.md  entrypoint.py  precis-tui.spec  precis.spec  pyproject.toml  requirements.txt  tui_entrypoint.py
backend/app/: __init__.py  cli_main.py  start_server.py
backend/app/api/: __init__.py  dependencies.py  main.py
backend/app/api/middleware/: __init__.py  exception_handler.py  request_logging.py
backend/app/api/models/: __init__.py  connection_rules.py  files.py  full_validation.py  preview.py  project.py  projects.py  schema.py  v2_responses.py  validation.py  workspace.py
backend/app/api/routers/: __init__.py
backend/app/api/routers/ai/: __init__.py  chat.py  generate.py  hardware.py  jobs.py  migrate.py  models.py  ollama.py  providers.py  router.py  stream.py  utils.py
backend/app/api/routers/core/: __init__.py  connection_rules.py  data_sources.py  regex.py  reporting.py  whitelist.py
backend/app/api/routers/files/: __init__.py  ops.py  transfer.py
backend/app/api/routers/preview/: __init__.py  content_mode.py  header_row.py  models.py  path_mode.py  router.py
backend/app/api/routers/project/: __init__.py  base.py  constraint.py  full_config.py  full_config_writer.py  helpers.py  inspection_fix.py  manifest.py  models.py  pattern.py  regex.py  scanner.py  schema.py  schema_helpers.py  settings.py  template.py  validation.py  view.py  workspaces.py
backend/app/api/routers/projects/: __init__.py  create.py  open.py  scan.py
backend/app/api/routers/validation/: __init__.py  common.py  content_mode.py  history.py  inline_mode.py  path_mode.py  router.py
backend/app/api/services/: full_validation_response_builder.py  preview_service.py
backend/app/cli/: __init__.py  __main__.py  start.py
backend/app/cli/shared_services/: __init__.py  config_ops.py  generation_ops.py  project_ops.py
backend/app/cli/shell/: __init__.py  completer.py  config_storage.py  exceptions.py  formatter.py  interactive_menu.py  main.py  parser.py
backend/app/cli/shell/commands/: __init__.py  base.py  exit.py  help.py  open.py  project.py  provider.py  setup.py  system.py  validate.py
backend/app/cli/tui/: README.md  __init__.py  __main__.py  app.py  protocols.py  themes.py
backend/app/cli/tui/fx/: __init__.py  animation.py  aurora.py  canvas.py  confetti.py  engine.py  focus_glow.py  glow.py  meteor.py  particle.py  starfield.py  transition.py
backend/app/cli/tui/screens/: __init__.py  base.py  chat.py  config.py  dashboard.py  generate.py  provider.py  splash.py  validation.py
backend/app/cli/tui/services/: __init__.py  ai_service.py  config_service.py  generation_service.py  provider_service.py  validation_service.py
backend/app/cli/tui/styles/: app.tcss
backend/app/cli/tui/widgets/: __init__.py  command_palette.py  history_list.py  sidebar.py  status_bar.py  toast.py
backend/app/shared/core/: __init__.py  edition.py
backend/app/shared/core/config/: __init__.py  server.py
backend/app/shared/domain/: __init__.py  data_engine.py  data_types.py  dataset_schema.py  expression_system.py  validation_constraints.py
backend/app/shared/services/: __init__.py  hardware.py  project_loader.py  schema_runtime_builder.py
backend/scripts/: golden_check.py  qa_simple_golden_check.py
backend/tests/: conftest.py  test_local_file_reporter.py  test_schema_builder.py
backend/tests/integration/: test_api_health.py  test_api_routes.py  test_api_schema_and_template.py  test_api_validation_endpoints.py  test_cli_regression.py  test_cli_smoke.py  test_corrupted_config.py  test_golden_check.py  test_load_project_integration.py  test_migrate_multi_source_integration.py  test_pattern_endpoints.py  test_projects_create.py  test_qa_simple_complex.py  test_qa_v3_complex.py  test_tui_p1.py  test_tui_p6.py
backend/tests/unit/: test_action_registry.py  test_action_specs.py  test_agent_executor.py  test_agent_planner.py  test_ai_config_loader_behavior.py  test_ai_router_lazy.py  test_ai_router_registration.py  test_ai_security.py  test_ai_utils.py  test_allowed_values_constraint.py  test_api_dependencies.py  test_api_middleware.py  test_api_models.py  test_apply_actions_two_phase.py  test_auto_parser_advanced.py  test_cached_provider.py  test_charset_constraint.py  test_chat_agent_runner.py  test_chat_tools.py  test_chunked_constraint_correctness.py  test_chunked_loader.py  test_chunked_loader_deep.py  test_chunked_loader_perf.py  test_cli_formatter.py  test_column_utils.py  test_completer.py  test_composite_constraint.py  test_composite_validator.py  test_condition_registry.py  test_conditional_constraint.py  test_config_builder.py  test_config_diff.py  test_config_diff_behavior.py  test_config_generator_behavior.py  test_config_inspector.py  test_config_inspector_behavior.py  test_config_paths.py  test_constraint_base.py  test_constraint_builder.py  test_constraint_builder_behavior.py  (+161 more)
backend/tests/unit/api/: test_file_ops.py  test_file_transfer.py  test_job_resume.py  test_migrate_resume.py  test_open_project.py  test_scan_projects.py
backend/tests/unit/cli/: test_ai_command_context.py  test_ai_display.py  test_ai_generate.py  test_ai_migrate.py  test_help_command.py  test_parser_and_context.py  test_validate_inspect_suppression.py
backend/tests/unit/shared_services/: test_config_ops.py  test_generation_ops.py  test_project_ops.py
backend/tests/unit/tui/: test_ai_service.py  test_app_skeleton.py  test_config_service.py  test_generation_service.py  test_provider_service.py  test_validation_service.py
tui-rust/: AGENTS.md  Cargo.toml  README.md
tui-rust/src/: app.rs  backend.rs  fx.rs  icons.rs  main.rs  theme.rs
tui-rust/src/api/: client.rs  mod.rs  types.rs
tui-rust/src/ui/: chat.rs  config.rs  dashboard.rs  mod.rs  provider.rs  sidebar.rs  splash.rs  validation.rs  widgets.rs
(+1818 files in other folders)
