[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "precis"
version = "0.1.0"
description = "Precis - 可配置数据校验工具 CLI"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12,<3.14"
authors = [
    {name = "Precis Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    # 数据验证与序列化
    "pydantic>=2.12.0",
    # 数据处理
    "pandas>=2.2.0,<3.0",
    "openpyxl>=3.1.5",
    # 数据库与 SQL
    "SQLAlchemy>=2.0.48",
    # YAML 解析
    "pyyaml>=6.0.3",
    "ruamel.yaml>=0.19.0",
    # CLI 输出美化
    "rich>=13.0.0",
    # CLI 交互
    "readchar>=4.2.0",
    # 安全
    "cryptography>=49.0.0",
    # 安全表达式求值 (替代 eval)
    "simpleeval>=1.0.0",
    # 文件锁
    "filelock>=3.12.0",
]

[project.optional-dependencies]
# API 服务端（桌面端/前端需要）
api = [
    "fastapi>=0.135.0,!=0.136.3",
    "uvicorn>=0.42.0",
    "email-validator>=2.3.0",
    "uritemplate>=4.2.0",
    "python-multipart>=0.0.26",
    "cryptography>=49.0.0",
]
# AI/LLM 功能 (可选)
ai = [
    "openai>=1.6.0",
    "aiohttp>=3.9.0",
    "psutil>=5.9.6",
]
# CLI Tab 补全 (仅 Windows 需要；Unix 使用 stdlib readline)
completion = [
    "pyreadline3>=0.1.8; sys_platform == 'win32'",
]
# 完整安装 (包含所有功能)
full = [
    "precis[api,ai,completion]",
]
# 开发依赖
dev = [
    "precis[api]",
    "debugpy>=1.8.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.scripts]
precis = "app.cli.shell.main:main"
precis-start = "app.cli.start:main"

[project.urls]
Homepage = "https://github.com/AirSaiga/Precis"
Repository = "https://github.com/AirSaiga/Precis"
Documentation = "https://github.com/AirSaiga/Precis/tree/main/docs"
"Bug Tracker" = "https://github.com/AirSaiga/Precis/issues"
"Discussions" = "https://github.com/AirSaiga/Precis/discussions"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["providers.yaml"]

# ============================================================================
# 代码质量与测试工具配置
# ============================================================================

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".git",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter or tolerated)
    "E402",  # module import not at top (project uses sys.path injection pattern)
    "N815",  # mixedCase variable in class scope (Pydantic API model fields match frontend JSON)
    # 以下 UP 规则在 py312 target 下偏激进，且存在运行时兼容风险，暂不强制：
    "UP042", # class Foo(str, Enum) -> StrEnum：与 pydantic v2 序列化/openapi 生成存在细微差异
    "UP046", # Generic 类改用 PEP 695 类型参数语法：3.12 独有，转换需逐个确认泛型语义
    "UP047", # Generic 函数改用 PEP 695 类型参数语法：同上
]

[tool.ruff.lint.per-file-ignores]
# 测试文件中允许 mock patch 使用大写变量名（unittest.mock 惯例）
"tests/**" = ["N806"]
"tests/**/test_*.py" = ["N806"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true
disable_error_code = ["import-untyped"]
plugins = ["pydantic.mypy"]
exclude = [
    ".venv",
    "build",
    "dist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
